Filling the catalogue

--- a/app.ini
+++ b/app.ini
@@ -5,4 +5,4 @@ password = UT92?aHh8j5%x
 host     = localhost
 user     = u0057_1234567
 password = GDZUeJdZeoSADO3jDbx6XQIWxf18m2#
-name     = u0057069_accademiapigna
+name     = u0057069_pigna
